<resources>
    <string name="app_name">GB Material design</string>
    <string name="search_wiki">Search wiki</string>
    <string name="wiki_helper_text">Input text for search in wiki</string>
    <string name="photo_of_the_day_stub">photo_of_the_day_stub</string>
    <string name="floating_action_button">FloatingActionButton</string>
    <string name="error">Error</string>
    <string name="PictureOfTheDay">PictureOfTheDay</string>
    <string name="home">Home</string>
    <string name="load_again">Load again</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="pink_theme">Pink</string>
    <string name="green_theme">Green</string>
    <string name="default_theme">Default</string>
    <string name="earth_image">earth_image</string>
    <string name="mars_image">mars_image</string>
    <string name="planets">Planets</string>
    <string name="ic_android">ic_android</string>
    <string name="task_list">Task list</string>
    <string name="new_task">New task</string>
    <string name="trigger_move">trigger_move</string>
    <string name="img_splash_screen">img_splash_screen</string>
</resources>