<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.EarthFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:id="@+id/success_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/earth_title"
                style="@style/textStyleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/earth_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="@dimen/small_margin"
                android:contentDescription="@string/earth_image" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/error_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/textStyleError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_again" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_state"
        style="@style/progressBarStyle" />

</FrameLayout>
